--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -589,6 +589,8 @@ items:
                 href: meeting-policies-in-teams-general.md
               - name: Политики в отношении звука и видео
                 href: meeting-policies-audio-and-video.md
+              - name: Политики записи и транскрибирования
+                href: meetings-policies-recording-and-transcription.md
               - name: Политики общего доступа к содержимому и демонстрации экрана
                 items:
                   - name: Общий доступ к содержимому
@@ -763,6 +765,8 @@ items:
                 href: rooms/obtaining-assigning-license.md
               - name: Регистрация в управляемой службе MTRP
                 href: rooms/enrolling-mtrp-managed-service.md
+              - name: Настройка ServiceNow для Комнат Teams
+                href: rooms/microsoft-teams-rooms-configure-servicenow.md
           - name: Планирование
             items:
               - name: Обзор планирования комнат Microsoft Teams
@@ -1347,6 +1351,8 @@ items:
         href: deploy-apps-microsoft-teams-landing-page.md
       - name: Приложения от Майкрософт
         items:
+          - name: Управление приложением Bookings
+            href: bookings-app-admin.md
           - name: Управление приложением Lists
             href: manage-lists-app.md
           - name: Управление приложением "Задачи"
@@ -1355,7 +1361,7 @@ items:
             href: manage-praise-app.md
           - name: Управление приложением "Утверждения" в Teams
             href: approval-admin.md
-          - name: Управление приложением "Смены" для организации в Teams
+          - name: Управление приложением "Смены"
             href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
       - name: Сторонние приложения
         items:
@@ -1416,8 +1422,14 @@ items:
           - name: '"Смены" для Teams'
             href: expand-teams-across-your-org/shifts-for-teams-landing-page.md
             items:
-              - name: Управление приложением "Смены" для организации в Teams
+              - name: Управление приложением "Смены"
                 href: expand-teams-across-your-org/shifts/manage-the-shifts-app-for-your-organization-in-teams.md
+          - name: Bookings в Teams
+            items:
+              - name: Виртуальные визиты с помощью Teams и Bookings
+                href: expand-teams-across-your-org/bookings-virtual-visits.md
+              - name: Управление приложением Bookings
+                href: bookings-app-admin.md
       - name: Teams для сферы здравоохранения
         items:
           - name: Начало работы с Teams для сферы здравоохранения
@@ -1428,8 +1440,8 @@ items:
                 href: expand-teams-across-your-org/healthcare/ehr-admin.md
               - name: Отчеты администратора электронных медицинских карт
                 href: expand-teams-across-your-org/healthcare/ehr-admin-reports.md
-              - name: Виртуальные визиты с помощью Bookings и Teams
-                href: bookings-app-admin.md
+              - name: Виртуальные визиты с помощью Teams и Bookings
+                href: expand-teams-across-your-org/bookings-virtual-visits.md
               - name: Управление возможностями присоединения в мобильных браузерах
                 href: expand-teams-across-your-org/mobile-browser-join.md
           - name: Просмотр и назначение пакетов политик
@@ -1588,6 +1600,8 @@ items:
             href: sharepoint-onedrive-interact.md
       - name: Устройства Teams для образования
         href: devices-for-education.md
+      - name: Руководство по комнате собраний для Teams
+        href: teams-meeting-room-guidance.md
       - name: Поддерживаемые устройства
         items:
           - name: Управление устройствами в Teams
