--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -901,6 +901,8 @@ items:
             href: shared-line-appearance.md
           - name: Настройка панели набора номера
             href: dial-pad-configuration.md
+          - name: Музыка в режиме удержания
+            href: music-on-hold.md
       - name: Варианты подключения ТСОП
         items:
           - name: Обзор
@@ -1000,33 +1002,39 @@ items:
       - name: Номера телефонов
         items:
           - name: Управление номерами телефонов для организации
-            href: manage-phone-numbers-for-your-organization/manage-phone-numbers-for-your-organization.md
-          - name: 'Типы телефонных номеров, используемые для плана звонков'
-            href: different-kinds-of-phone-numbers-used-for-calling-plans.md
-          - name: Получение номеров телефонов для пользователей
-            href: getting-phone-numbers-for-your-users.md
+            href: manage-phone-numbers-landing-page.md
           - name: Предоставляемое количество номеров телефонов
             href: how-many-phone-numbers-can-you-get.md
           - name: Поиск номеров телефонов пользователей
             href: search-for-phone-numbers-for-users.md
           - name: Просмотр списка телефонных номеров в организации
             href: see-a-list-of-phone-numbers-in-your-organization.md
-          - name: 'Назначение, изменение и удаление номера телефона пользователя'
-            href: assign-change-or-remove-a-phone-number-for-a-user.md
-          - name: Получение номеров телефонов служб
-            href: getting-service-phone-numbers.md
-          - name: Перенос номеров телефона
+          - name: Управление номерами телефонов для тарифного плана
             items:
-              - name: Что такое заказ на перенос номера?
-                href: phone-number-calling-plans/port-order-overview.md
-              - name: Перенос номеров телефона в Teams
-                href: phone-number-calling-plans/transfer-phone-numbers-to-teams.md
-              - name: Отправка заказа на перенос номера вручную
-                href: phone-number-calling-plans/manually-submit-port-order.md
-              - name: Каково состояние ваших заказов на перенос номеров?
-                href: phone-number-calling-plans/port-order-status.md
-          - name: Поддерживаемые центры тарификации и охват
-            href: phone-number-calling-plans/supported-rate-centers-coverage-matrix.md
+              - name: Обзор
+                href: manage-phone-numbers-for-your-organization/manage-phone-numbers-for-your-organization.md
+              - name: Получение номеров телефонов для пользователей
+                href: getting-phone-numbers-for-your-users.md
+              - name: 'Назначение, изменение и удаление номера телефона пользователя'
+                href: assign-change-or-remove-a-phone-number-for-a-user.md
+              - name: Получение служебных номеров телефонов
+                href: getting-service-phone-numbers.md
+              - name: Перенос номеров телефона
+                items:
+                  - name: Что такое заказ на перенос номера?
+                    href: phone-number-calling-plans/port-order-overview.md
+                  - name: Перенос номеров телефона в Teams
+                    href: phone-number-calling-plans/transfer-phone-numbers-to-teams.md
+                  - name: Отправка заказа на перенос номера вручную
+                    href: phone-number-calling-plans/manually-submit-port-order.md
+                  - name: Каково состояние ваших заказов на перенос номеров?
+                    href: phone-number-calling-plans/port-order-status.md
+              - name: Поддерживаемые центры тарификации и охват
+                href: phone-number-calling-plans/supported-rate-centers-coverage-matrix.md
+          - name: Управление номерами телефонов для Operator Connect
+            href: operator-connect-configure.md#set-up-phone-numbers
+          - name: Управление номерами телефонов для прямой маршрутизации
+            href: direct-routing-enable-users.md#configure-the-phone-number-and-enable-enterprise-voice-and-voicemail-online
       - name: Маршрутизация голосовой связи
         items:
           - name: Что такое абонентские группы?
