--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -299,6 +299,8 @@ items:
             href: audit-log-events.md
           - name: Ключ клиента
             href: /microsoft-365/compliance/customer-key-tenant-level?bc=%2fmicrosoftteams%2fbreadcrumb%2ftoc.json&toc=%2fmicrosoftteams%2ftoc.json
+          - name: API экспорта для содержимого Teams
+            href: export-teams-content.md
       - name: Конфиденциальность
         items:
           - name: Конфиденциальность и Microsoft Teams
@@ -741,7 +743,7 @@ items:
                 href: ptsn-mask-phone-numbers.md
           - name: Доступность аудиоконференций в различных странах и регионах
             href: country-and-region-availability-for-audio-conferencing-and-calling-plans/country-and-region-availability-for-audio-conferencing-and-calling-plans.md
-          - name: Справка
+          - name: Справочные материалы
             items:
               - name: Поддерживаемые языки аудиоконференций
                 href: audio-conferencing-supported-languages.md
@@ -1571,7 +1573,7 @@ items:
             href: audio-conferencing-with-direct-routing-for-gcch-and-dod.md
           - name: Пакеты политик Teams для государственных организаций
             href: policy-packages-gov.md
-  - name: Справка
+  - name: Справочные материалы
     items:
       - name: Ограничения и спецификации для Teams
         href: limits-specifications-teams.md
