--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -111,8 +111,6 @@ items:
                 href: teams-for-vdi.md
               - name: Teams для среды удаленных рабочих столов (RDP)
                 href: teams-on-rdp.md
-              - name: Развертывание Teams для Surface Hub
-                href: teams-surface-hub.md
               - name: Обновления клиента Teams
                 href: teams-client-update.md
               - name: Устранение неполадок при установке и обновлении
@@ -645,6 +643,8 @@ items:
                 href: cloud-video-interop.md
               - name: Режим собраний только для просмотра
                 href: view-only-meeting-experience.md
+              - name: Потоковая передача собрания Teams
+                href: stream-teams-meetings.md
           - name: Настройка службы переноса собраний (MMS)
             href: /SkypeForBusiness/audio-conferencing-in-office-365/setting-up-the-meeting-migration-service-mms?toc=/MicrosoftTeams/toc.json&bc=/microsoftteams/breadcrumb/toc.json
           - name: Подготовка к вебинарам в Microsoft Teams
@@ -1666,8 +1666,6 @@ items:
             href: alerts/device-health-status.md
           - name: Устройства и периферийные аксессуары Teams
             href: teams-device-health.md
-          - name: Функциональные возможности административных единиц для управления устройствами
-            href: administrative-unit.md
       - name: PowerShell в Teams
         items:
           - name: Обзор
