--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -257,6 +257,8 @@ items:
         items:
           - name: Руководство по безопасности
             href: teams-security-guide.md
+          - name: Сквозное шифрование
+            href: teams-end-to-end-encryption.md
           - name: Azure Sentinel и Teams
             href: teams-sentinel-guide.md
           - name: Модели удостоверений и проверка подлинности
@@ -325,7 +327,7 @@ items:
         href: manage-teams-overview.md
       - name: Роли администратора
         href: using-admin-roles.md
-      - name: Управление Teams в Центре администрирования Microsoft Teams
+      - name: Управление Teams в Центре администрирования Teams
         href: manage-teams-in-modern-portal.md
       - name: Управление параметрами Teams в организации
         href: enable-features-office-365.md
