--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -745,7 +745,7 @@ items:
                 href: ptsn-mask-phone-numbers.md
           - name: Доступность аудиоконференций в различных странах и регионах
             href: country-and-region-availability-for-audio-conferencing-and-calling-plans/country-and-region-availability-for-audio-conferencing-and-calling-plans.md
-          - name: Справка
+          - name: Справочные материалы
             items:
               - name: Поддерживаемые языки аудиоконференций
                 href: audio-conferencing-supported-languages.md
@@ -1464,7 +1464,9 @@ items:
             href: expand-teams-across-your-org/healthcare/teams-in-hc.md
           - name: Виртуальные визиты
             items:
-              - name: Виртуальные визиты с помощью Teams — интеграция с электронными медицинскими картами
+              - name: Виртуальные визиты с помощью Teams — интеграция с электронными медицинскими картами Cerner
+                href: expand-teams-across-your-org/healthcare/ehr-admin-cerner.md
+              - name: Виртуальные визиты с помощью Teams — интеграция с электронными медицинскими картами Epic
                 href: expand-teams-across-your-org/healthcare/ehr-admin.md
               - name: Отчеты администратора электронных медицинских карт
                 href: expand-teams-across-your-org/healthcare/ehr-admin-reports.md
@@ -1584,7 +1586,7 @@ items:
             href: audio-conferencing-with-direct-routing-for-gcch-and-dod.md
           - name: Пакеты политик Teams для государственных организаций
             href: policy-packages-gov.md
-  - name: Справка
+  - name: Справочные материалы
     items:
       - name: Ограничения и спецификации для Teams
         href: limits-specifications-teams.md
