--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -369,8 +369,6 @@ items:
                 href: view-guests.md
               - name: Изменение сведений о гостях
                 href: edit-guests-information.md
-              - name: Устранение неполадок гостевого доступа
-                href: troubleshoot-guest-access.md
       - name: Отслеживание качества звонка и управление им
         items:
           - name: Отслеживание и улучшение качества звонка
@@ -745,7 +743,7 @@ items:
                 href: ptsn-mask-phone-numbers.md
           - name: Доступность аудиоконференций в различных странах и регионах
             href: country-and-region-availability-for-audio-conferencing-and-calling-plans/country-and-region-availability-for-audio-conferencing-and-calling-plans.md
-          - name: Справка
+          - name: Справочные материалы
             items:
               - name: Поддерживаемые языки аудиоконференций
                 href: audio-conferencing-supported-languages.md
@@ -1586,7 +1584,7 @@ items:
             href: audio-conferencing-with-direct-routing-for-gcch-and-dod.md
           - name: Пакеты политик Teams для государственных организаций
             href: policy-packages-gov.md
-  - name: Справка
+  - name: Справочные материалы
     items:
       - name: Ограничения и спецификации для Teams
         href: limits-specifications-teams.md
