--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -99,7 +99,7 @@ items:
                 href: hardware-requirements-for-the-teams-app.md
               - name: Рекомендации по драйверам аппаратного декодера и кодировщика
                 href: hardware-decoders-and-encoders.md
-              - name: Установка Teams с помощью MSI
+              - name: Установите Microsoft Teams с помощью Microsoft Endpoint Configuration Manager
                 href: msi-deployment.md
               - name: Включение Teams в организации
                 href: Office-365-set-up.md
