--- a/Teams/toc.yml
+++ b/Teams/toc.yml
@@ -749,7 +749,7 @@ items:
                 href: ptsn-mask-phone-numbers.md
           - name: Доступность аудиоконференций в различных странах и регионах
             href: country-and-region-availability-for-audio-conferencing-and-calling-plans/country-and-region-availability-for-audio-conferencing-and-calling-plans.md
-          - name: Справочные материалы
+          - name: Справка
             items:
               - name: Поддерживаемые языки аудиоконференций
                 href: audio-conferencing-supported-languages.md
@@ -1592,7 +1592,7 @@ items:
             href: audio-conferencing-with-direct-routing-for-gcch-and-dod.md
           - name: Пакеты политик Teams для государственных организаций
             href: policy-packages-gov.md
-  - name: Справочные материалы
+  - name: Справка
     items:
       - name: Ограничения и спецификации для Teams
         href: limits-specifications-teams.md
@@ -1643,7 +1643,9 @@ items:
                 href: /microsoft-365/security/office-365-security/create-safe-sender-lists-in-office-365
           - name: Взаимодействие SharePoint Online и OneDrive для бизнеса с Teams
             href: sharepoint-onedrive-interact.md
-      - name: Поддерживаемые устройства
+      - name: Устройства Teams для образования
+        href: devices-for-education.md
+      - name: Устройства
         items:
           - name: Управление устройствами в Teams
             href: devices/device-management.md
@@ -1681,6 +1683,12 @@ items:
             href: /skypeforbusiness/certification/devices-meeting-rooms?toc=/MicrosoftTeams/toc.json&bc=/microsoftteams/breadcrumb/toc.json
           - name: Сертифицированные устройства Teams
             href: devices/teams-ip-phones.md
+          - name: SIP-шлюз
+            items:
+              - name: Планирование SIP-шлюза
+                href: sip-gateway-plan.md
+              - name: Настройка SIP-шлюза
+                href: sip-gateway-configure.md
           - name: Телефоны для приложения Skype для бизнеса Online
             href: /SkypeForBusiness/what-is-phone-system-in-office-365/getting-phones-for-skype-for-business-online/deploying-skype-for-business-online-phones?toc=/MicrosoftTeams/toc.json&bc=/microsoftteams/breadcrumb/toc.json
           - name: Оповещения и мониторинг в Teams
